--- a/Source/Vehicle/ToolsForHaul.csproj
+++ b/Source/Vehicle/ToolsForHaul.csproj
@@ -11,7 +11,8 @@
     <AssemblyName>ToolsForHaul</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,7 +47,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="CombatRealism">
-      <HintPath>..\..\..\CombatRealism-master\Assemblies\CombatRealism.dll</HintPath>
+      <HintPath>..\..\..\CombatRealism\Assemblies\CombatRealism.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Community Core Library">
@@ -65,6 +66,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Components\Vehicles\CompProperties_Mountable.cs" />
+    <Compile Include="IncidentWorker\IncidentWorker_TraderCaravanArrival.cs" />
     <Compile Include="MoteCounter.cs" />
     <Compile Include="Defs\HaulStatDefOf.cs" />
     <Compile Include="Components\Vehicles\CompDriver.cs" />
@@ -105,7 +108,6 @@
     <Compile Include="_inactive\_TESTING\HeadLights.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_RaidEnemy.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_VisitorGroup.cs" />
-    <None Include="_inactive\JobGiver_ExitMapRandom2.cs" />
     <Compile Include="Alerts\Alert_TankIsLeaking.cs" />
     <Compile Include="StatWorkers\StatWorker_MoveSpeed.cs" />
     <None Include="_inactive\Class1.cs" />
